--- a/css/styles.css
+++ b/css/styles.css
@@ -5,144 +5,29 @@
 body {
   font-family: 'Montserrat', sans-serif;
   font-family: 'Poppins', sans-serif;
+  background-color: #fff89f;
 }
 
-a {
-  color: #425970;
-  transition: 0.5s opacity;
+.extra-top {
+  margin-top: 60px;
 }
 
-a:visited {
-  color: #1a232c;
+.pokedex-custom-font {
+  font-family: 'Ranchers', cursive;
 }
 
-a:hover,
-a:focus {
-  text-decoration: none;
-  cursor: pointer;
-  opacity: 0.8;
+.list-group-item {
+  border: none;
+  background-color: #fff89f;
+  margin: 0;
+  padding: 10px 0;
 }
 
-a:active {
-  color: #7e99b4;
+.modal-header {
+  background-color: #17a2b8;
 }
 
-/* Header Section */
-.pokedex-header {
-  display: flex;
-  width: 100%;
-  padding: 20px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-.pokedex-header__logo {
-  max-width: 100%;
-  height: auto;
-}
-
-.pokedex-header__item {
-  flex: 0 1 200px;
-}
-
-.pokedex-header .pokedex-header__item:last-child {
-  flex-grow: 1;
-  text-align: right;
-}
-
-/* Navigation Section */
-.navigation-list {
-  list-style-type: none;
-}
-
-.navigation-list li {
-  display: inline-block;
-  margin-left: 15px;
-}
-
-.navigation-list__item--active {
-  text-decoration: none;
-}
-
-/* Pokémon List */
-.pokemon-list {
-  list-style-type: none;
-}
-
-.pokemon-button {
-  background-color: #e7e7e7;
-  border: 2px solid #e7e7e7;
-  color: black;
-  padding: 16px 32px;
-  text-align: left;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-  width: 250px;
-}
-
-.pokemon-button:hover {
-  background-color: white;
-}
-
-/* Modal Styling */
-#modal-container {
-  display: none;
-}
-
-#modal-container.is-visible {
-  position: fixed;
-  padding: 20px;
-  box-sizing: border-box;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-
-  /* to show it above other content */
-  z-index: 999;
-
-  /* to allow scrolling if the screen is not high enough*/
-  overflow: auto;
-
-  /* this is used to center the modal */
-  display: grid;
-  text-align: center;
-}
-
-.modal {
-  margin: auto;
-  display: inline-block;
-  box-sizing: border-box;
-  background: #fff;
-  padding: 15px;
-  width: 100%;
-  max-width: 700px;
-  text-align: left;
-}
-
-.modal-close {
-  float: right;
-  -webkit-appearance: none;
-  border: 0;
-  background: none;
-  color: #777;
-  text-decoration: underline;
-}
-
-.modal h1 {
-  margin-top: 0;
-}
-
-.modal p {
-  margin-bottom: 0;
-}
-
-/* Pokémon image styling */
-.image-container {
-  width: 50%;
-  height: auto;
+.modal-title {
+  color: #fff;
+  font-family: 'Ranchers', cursive;
 }
